--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 <div class="card">
     <div class="search">
-        <input type="text" placeholder="enter city name" spellcheck="false">
+        <input type="text" placeholder="Enter city name" spellcheck="false">
         <button><img src="images/search.png"></button>
     </div>
         <div class="error">
